set(CMAKE_CXX_STANDARD 20)
cmake_minimum_required(VERSION 3.20)
project(sorting CXX)
add_executable(testing_bubble_sort bubble_sort.test.cpp)
add_executable(testing_selection_sort selection_sort.test.cpp)
add_executable(testing_insertion_sort insertion_sort.test.cpp)
add_executable(testing_shell_sort shell_sort.test.cpp)
